--- a/Createx/css/style.css
+++ b/Createx/css/style.css
@@ -22,24 +22,6 @@ html, body {
   height: 100%;
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 50;
-  background: rgba(0, 0, 0, .349);
-  visibility: hidden;
-  opacity: 0;
-  transition: all .3s;
-}
-
-.overlay--show {
-  visibility: visible;
-  opacity: 1;
-}
-
 .burger {
   display: none;
 }
@@ -246,6 +228,7 @@ html, body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin-bottom: 80px;
 }
 
 .header__main {
@@ -307,7 +290,6 @@ html, body {
   justify-items: center;
   align-items: center;
   color: #1e212c;
-  margin-bottom: 80px;
 }
 
 .header__row>span {
@@ -415,6 +397,7 @@ html, body {
 .about__numbers {
   margin-left: 30px;
   align-self: center;
+  white-space: nowrap;
 }
 
 .about__number {
@@ -473,11 +456,13 @@ html, body {
 
 .directions__filter-box {
   display: flex;
-  margin-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .directions__filter-item {
   margin-right: 45px;
+  margin-bottom: 15px;
 }
 
 .directions__filter-item:last-child {
@@ -494,6 +479,7 @@ html, body {
   font-size: 16px;
   line-height: 1;
   padding: 5px 7px;
+  white-space: nowrap;
 }
 
 .directions__filter-btn--active {
@@ -663,6 +649,12 @@ html, body {
   box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
 }
 
+.cert__image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 
 /* =============================== TEAM =========================== */
 /* =============================== TEAM =========================== */
@@ -709,6 +701,7 @@ html, body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
 }
 
 .team__socials {
@@ -812,6 +805,9 @@ html, body {
 }
 
 .team__slider-next {}
+
+
+
 
 /* ======================= TESTIMONIALS ====================*/
 /* ======================= TESTIMONIALS ====================*/
@@ -1013,6 +1009,7 @@ html, body {
 
 .companieas__inner {
   position: relative;
+  text-align: center;
 }
 
 .companies__inner::before {
@@ -1032,7 +1029,7 @@ html, body {
 .companies__grid {
   display: grid;
   grid-template: repeat(2, auto) / repeat(6, 1fr);
-  gap: 40px 100px;
+  gap: 40px 8.1%;
 }
 
 .companies__grid-item {}
@@ -1130,7 +1127,14 @@ html, body {
   transform: rotate(0deg);
 }
 
-.program__image {}
+.program__image {
+  flex-shrink: 0;
+}
+
+.program__image img {
+  width: 100%;
+  height: 100%;
+}
 
 /* =================================== BLOG ========================= */
 /* =================================== BLOG ========================= */
@@ -1160,26 +1164,33 @@ html, body {
 
 .blog__item {
   padding: 0 15px;
+  flex: 0 1 33.333%;
 }
 
 .blog__item-link {
   display: block;
+  height: 100%;
   transition: all 1.3s;
 }
 
-.blog__item-inner {}
+.blog__item-inner {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 .blog__image-box {
   border-radius: 4px;
   overflow: hidden;
   position: relative;
+  max-height: 315px;
+  margin-bottom: 16px;
 }
 
 .blog__image-box img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  margin-bottom: 16px;
 }
 
 .blog__image-box span {
@@ -1201,7 +1212,11 @@ html, body {
   margin-right: 4px;
 }
 
-.blog__item-content {}
+.blog__item-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
 
 .blog__item-info {
   display: flex;
@@ -1235,7 +1250,6 @@ html, body {
 .blog__info-date {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .blog__info-date::before {
@@ -1271,6 +1285,7 @@ html, body {
 
 .blog__item-text {
   margin-bottom: 16px;
+  flex-grow: 1;
 }
 
 .blog__item-button {
@@ -1299,16 +1314,20 @@ html, body {
   transition: all .3s;
 }
 
+.blog__item--podcast .blog__image-box {
+  background: #a2d0f7;
+}
+
+.blog__item--video .blog__image-box {
+  background: #caf0e3;
+}
+
+.blog__item--article .blog__image-box {
+  background: #fff8aa;
+}
+
 .blog__item--podcast .blog__image-box span::before {
   background: url("../images/icons/podcast-icon.svg") 0 0 / 100% no-repeat;
-}
-
-.blog__item--video .blog__image-box span::before {
-  background: url("../images/icons/play-mini.svg") 0 0 / 100% no-repeat;
-}
-
-.blog__item--article .blog__image-box span::before {
-  background: url("../images/icons/article-icon.svg") 0 0 / 100% no-repeat;
 }
 
 /* ============================== INFO ===============================*/
@@ -1440,7 +1459,14 @@ html, body {
   justify-content: space-between;
 }
 
-.questions__img {}
+.questions__img {
+  min-width: 350px;
+}
+
+.questions__img img {
+  height: 100%;
+  width: 100%;
+}
 
 .questions__content {
   margin-left: 30px;
@@ -1607,6 +1633,7 @@ html, body {
   text-transform: uppercase;
   margin-bottom: 12px;
   white-space: nowrap;
+  pointer-events: none;
 }
 
 .footer__top-col:last-child .footer__top-title {
@@ -1724,7 +1751,72 @@ html, body {
 /* ================================ MEDIA ====================================== */
 /* ================================ MEDIA ====================================== */
 
+/* ================================ 1200 ======================================== */
+@media (max-width: 1200px) {
+  .heder__title {
+    font-size: 52px;
+    max-width: 376px;
+  }
+
+  .header__img {
+    max-width: 450px;
+  }
+
+  /* ---------------------------- */
+
+  .blog__item-info {
+    flex-wrap: wrap;
+    margin: 0px 0px 8px;
+    justify-content: space-between;
+  }
+
+  .blog__info-el {
+    padding: 0;
+  }
+
+  .blog__info-el::after {
+    content: none;
+  }
+
+  .blog__info-dir {
+    order: 1;
+  }
+
+  .blog__info-date {
+    order: 3;
+    flex-basis: 100%;
+  }
+
+  .blog__info-time {
+    order: 2;
+  }
+
+
+
+
+
+}
+
+/* ================================ 1100 ======================================== */
 @media (max-width: 1100px) {
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 50;
+    background: rgba(0, 0, 0, .349);
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
+  }
+
+  .overlay--show {
+    visibility: visible;
+    opacity: 1;
+  }
+
   .burger {
     position: fixed;
     top: 0px;
@@ -1739,7 +1831,7 @@ html, body {
     justify-content: center;
     transition: all .3s;
   }
-  
+
   .burger--follow {
     top: 15px;
     right: 15px;
@@ -1754,6 +1846,7 @@ html, body {
     background-color: #424551;
     border-radius: 3px;
     margin: 4px 0;
+    transition: all .3s;
   }
 
   .burger::before,
@@ -1764,6 +1857,23 @@ html, body {
     height: 4px;
     background-color: #424551;
     border-radius: 3px;
+    transition: all .5s;
+  }
+
+  .burger--cross span {
+    opacity: 0;
+    width: 0%;
+    transition: all .3s;
+  }
+
+  .burger--cross::before {
+    transform: translateY(.5em) rotate(45deg);
+    transition: all .5s;
+  }
+
+  .burger--cross::after {
+    transform: translateY(-.5em) rotate(135deg);
+    transition: all .5s;
   }
 
   .header {
@@ -1811,7 +1921,8 @@ html, body {
   }
 
   .header__nav-item {
-    margin: 0;;
+    margin: 0;
+    ;
   }
 
   .header__nav-link {
@@ -1830,11 +1941,494 @@ html, body {
   .header__user-nav {
     margin-bottom: 30px;
   }
+
+  /* -------------------------- */
+
+  .heading__title {
+    font-size: 37px;
+  }
+
+  .about__img {
+    max-width: 400px;
+  }
+
+  /* -------------------------- */
+
+  .cert__inner {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cert__content {
+    margin: 0px 0px 30px 0px;
+  }
+
+  .cert__heading {
+    text-align: center;
+  }
+
+  /* -------------------------- */
+
+  .companies__grid {
+    gap: 40px 5%;
+  }
+
+  /* -------------------------- */
+
+  .program__image {
+    max-width: 400px;
+  }
+
+  /* -------------------------- */
+
+  .footer__top-inner {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  .footer__top-col {
+    margin-bottom: 30px;
+  }
+
+  .footer__top-col:first-child {
+    flex-basis: 100%;
+    max-width: none;
+    margin-bottom: 30px;
+  }
+
+  .footer__top-col:last-child {
+    flex-basis: 100%;
+    max-width: none;
+    margin-bottom: 0px;
+  }
+
+  .footer__form-items {
+    max-width: 315px;
+  }
 }
 
-@media (max-width: 400px) {
+
+/* ================================ 1000 ======================================== */
+@media (max-width: 1000px) {
+  .program__content {
+    margin-right: 0px;
+  }
+
+  .program__image {
+    display: none;
+  }
+}
+
+
+/* ================================ 900 ======================================== */
+@media (max-width: 900px) {
+  .header__content {
+    margin: 0;
+  }
+
+  .header__img {
+    display: none;
+  }
+
+  .header__row {
+    display: none;
+  }
+
+  /* -------------------------- */
+
+  .about__img {
+    display: none;
+  }
+
+  /* -------------------------- */
+
+  .directions__filter-item {
+    margin-right: 10px;
+  }
+
+  .directions__list {
+    gap: 30px 10px;
+  }
+
+  .directions__link-content {
+    padding: 24px 5px 5px;
+  }
+
+  /* -------------------------- */
+
+  .blog__row {
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .blog__item {
+    padding: 0px 0px 30px 0px;
+  }
+
+  .blog__image-box {
+    display: flex;
+    justify-content: center;
+  }
+
+  .blog__image-box img {
+    width: auto;
+  }
+
+  /* -------------------------- */
+
+  .info__inner {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .info__content {
+    margin: 0px 0px 30px 0px;
+  }
+
+  .info__map {
+    height: 200px;
+    width: 100%;
+    max-width: none;
+  }
+
+  /* -------------------------- */
+
+  .questions__img {
+    display: none;
+  }
+
+  .questions__content {
+    margin: 0;
+    width: 100%;
+  }
+}
+
+/* ================================ 700 ======================================== */
+@media (max-width: 700px) {
+  .about__createx {
+    margin-bottom: 60px;
+  }
+
+  .about__values {
+    flex-direction: column;
+  }
+
+  .about__image-box {
+    display: none;
+  }
+
+  .about__numbers {
+    margin: 0;
+    align-self: flex-start;
+  }
+
+  /* -------------------------- */
+
+  .directions__list {
+    grid-template: repeat(3, auto) / repeat(2, 1fr);
+  }
+
+  /* -------------------------- */
+
+  .testimonials__slider-wrapper {
+    padding: 0;
+  }
+
+  .testimonials__slide {
+    padding: 30px 15px;
+  }
+
+  .testimonials__arrow {
+    display: none;
+  }
+
+  /* -------------------------- */
+
+  .companies__grid {
+    grid-template: repeat(3, auto) / repeat(4, minmax(auto, 130px));
+  }
+}
+
+
+/* ================================ 550 ======================================== */
+@media (max-width: 550px) {
+  .heading {
+    margin-bottom: 30px;
+  }
+
+  .heading__subtitle {
+    font-size: 14px;
+    margin: 0;
+  }
+
+  .heading__title {
+    font-size: 25px;
+  }
+
+  /* ---------------------------------- */
+
+  .main__about,
+  .main__program {
+    padding: 60px 0 100px;
+  }
+
+  .main__directions,
+  .main__testimonials,
+  .main__blog,
+  .main__info {
+    padding-bottom: 100px;
+  }
+
+  .main__team {
+    padding: 120px 0px 100px;
+  }
+
+  .main__companies {
+    padding-bottom: 40px;
+  }
+
+  .main__questions {
+    padding-bottom: 40px;
+  }
+
+  /* ---------------------------------- */
+
+  .about__text {
+    margin-bottom: 30px;
+  }
+
+  .about__paragraph {
+    font-size: inherit;
+    margin-bottom: 10px;
+  }
+
+  .about__btn-box {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .about__btn {
+    margin: 0px 0px 30px 0px;
+  }
+
+  .about__btn:last-child {
+    margin: 0px;
+  }
+
+  /* ---------------------------------- */
+
+  .directions__list {
+    grid-template: none;
+  }
+
+  .directions__list-item--empty {
+    display: none;
+  }
+
+  /* ---------------------------------- */
+
+  .team__slider-arrows {
+    display: none;
+  }
+
+  .team__image-box {
+    max-width: 300px;
+    margin: 0 auto 16px;
+  }
+
+  .team__dots .slick-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .team__dots li {
+    margin-right: 12px;
+  }
+
+  .team__dots li:last-child {
+    margin-right: 0;
+  }
+
+  .team__dots button {
+    font-size: 0;
+    background-color: transparent;
+    width: 20px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+  }
+
+  .team__dots button::before {
+    content: "";
+    height: 3px;
+    width: 100%;
+    background-color: #B3B7BC;
+    border-radius: 3px;
+  }
+
+  .team__dots .slick-active button::before {
+    background-color: #424551;
+    transition: all .3s;
+  }
+
+  /* ---------------------------------- */
+
+  .testimonials__slider-wrapper {
+    margin-bottom: 15px;
+  }
+
+  .testimonials__slide-inner {
+    padding-left: 30px;
+  }
+
+  .testimonials__quote {
+    font-size: inherit;
+    line-height: inherit;
+  }
+
+  .testimonials__quote::before {
+    left: -30px;
+    width: 20px;
+  }
+
+  .testimonials__dots button {
+    width: 20px;
+  }
+
+  /* ---------------------------------- */
+
+  .companies__grid {
+    grid-template: repeat(4, auto) / repeat(3, 1fr);
+  }
+
+  /* ---------------------------------- */
+
+  .program__acc-head {
+    font-size: inherit;
+    line-height: inherit;
+  }
+
+  /* ---------------------------------- */
+
+  .blog__top {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 30px;
+  }
+
+  /* ---------------------------------- */
+
+  .questions__form-row {
+    flex-direction: column;
+  }
+
+  .questions__form-label {
+    font-size: 14px;
+    margin: 0px 0px 24px 0px;
+  }
+
+  .questions__form-label:last-child {
+    margin: 0px;
+  }
+
+  .questions__form-input,
+  .questions__form-text {
+    margin-top: 0;
+  }
+
+  .questions__text-label {
+    font-size: 14px;
+  }
+
+  .questions__checkbox-label {
+    font-size: 14px;
+    margin: 0px 0px 24px 0px;
+  }
+
+  /* ---------------------------------- */
+
+  .footer__top-inner {
+    flex-direction: column;
+  }
+
+  .footer__top-title--slide {
+    pointer-events: auto;
+    margin: 0;
+  }
+
+  .footer__top-list {
+    margin-top: 12px;
+    display: none;
+  }
+
+  .footer__bottom-inner {
+    flex-direction: column-reverse;
+  }
+
+  .footer__copy {
+    text-align: center;
+  }
+
+  .footer__go-top {
+    margin-bottom: 15px;
+  }
+}
+
+/* ================================ 450 ======================================== */
+@media (max-width: 450px) {
   .header__top {
     min-width: none;
     left: 0;
+  }
+
+  /* ---------------------------------- */
+
+  .header__title {
+    max-width: none;
+    font-size: 40px;
+  }
+
+  .header__content-buttons {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .header__content-btn {
+    margin: 0px 0px 30px 0px;
+    text-align: center;
+  }
+
+  /* ---------------------------------- */
+
+  .directions__filter-box {
+    margin-bottom: 15px;
+  }
+
+  /* ---------------------------------- */
+
+  .cert__logos {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cert__logos-item {
+    margin: 0px 0px 30px 0px;
+  }
+
+  .cert__logos-item:last-child {
+    margin: 0px;
+  }
+
+  /* ---------------------------------- */
+
+  .companies__grid {
+    grid-template: repeat(6, auto) / repeat(2, 1fr);
+  }
+
+  /* ---------------------------------- */
+
+  .info__socials-item {
+    margin-right: 15px;
   }
 }
